[gd_scene load_steps=2 format=3 uid="uid://b5dp0gcijhisy"]

[ext_resource type="Script" path="res://UI/DraggableMenu/DraggableMenu.gd" id="1_2ow3g"]

[node name="DraggableMenu" type="Control"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 3
anchor_right = 0.052
anchor_bottom = 0.093
offset_right = 0.159996
offset_bottom = -0.440002
grow_horizontal = 2
pivot_offset = Vector2(50, 50)
script = ExtResource("1_2ow3g")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DragButtonTop" type="Button" parent="."]
custom_minimum_size = Vector2(100, 30)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.3
grow_horizontal = 2
auto_translate = false
localize_numeral_system = false
focus_mode = 0
mouse_default_cursor_shape = 6
action_mode = 0
shortcut_feedback = false
shortcut_in_tooltip = false
flat = true
icon_alignment = 1

[node name="DragButtonBottom" type="Button" parent="."]
custom_minimum_size = Vector2(100, 30)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 22.0
grow_horizontal = 2
grow_vertical = 0
auto_translate = false
localize_numeral_system = false
focus_mode = 0
mouse_default_cursor_shape = 6
action_mode = 0
shortcut_feedback = false
shortcut_in_tooltip = false
flat = true

[connection signal="button_down" from="DragButtonTop" to="." method="_drag_button_held"]
[connection signal="button_up" from="DragButtonTop" to="." method="_drag_button_released"]
[connection signal="button_down" from="DragButtonBottom" to="." method="_drag_button_held"]
[connection signal="button_up" from="DragButtonBottom" to="." method="_drag_button_released"]
